--- a/ProyectoX/src/components/Card.module.css
+++ b/ProyectoX/src/components/Card.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Roboto:wght@500;700&display=swap');
 .container{
+    background-color: #fff;
     border: 1px solid #DFE4EA;
     width: 635px;
     height: 283px;
@@ -14,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .cardImg{
