--- a/ProyectoX/src/components/CardCategory.module.css
+++ b/ProyectoX/src/components/CardCategory.module.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Roboto:wght@500;700&display=swap');
 
 .card2{
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;  
     border: 1px solid #DFE4EA;
-    width: 18rem;
+    width: 17rem;
     height: 18rem;
     align-items:flex-start;    
     border-radius: 10px;
@@ -13,15 +14,15 @@
 }
 
 .cardImg{
-    width: 17.9rem;
+    width: 16.9rem;
     height: 12rem;
     border-radius: 10px 10px 0px 0px
 }
 
 
 .cardCategory{
-   margin: 10px 0px 0px 0px;
-    padding-left: 5%;
+   margin: -80px 0px 0px 0px;
+    padding-left: 5px;
     font-family:'Roboto', sans-serif;
     font-weight: 700;
     font-size: 1.25rem;
@@ -30,7 +31,7 @@
 
 
 .cardInfo{
-    padding-left: 5%;
+    padding-left: 5px;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     color: #383B58;
