--- a/ProyectoX/src/index.css
+++ b/ProyectoX/src/index.css
@@ -1,5 +1,7 @@
 *{
     box-sizing: border-box;
+    margin-left: 0; 
+    margin-right: 0;   
 }
 
 .space{
@@ -12,6 +14,9 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    gap:15px;
-    
+    gap:15px;  
+}
+
+.bgRecomendations{
+    background-color: #2020201a;
 }
