--- a/ProyectoX/src/components/List.module.css
+++ b/ProyectoX/src/components/List.module.css
@@ -2,5 +2,6 @@
     font-family: 'Roboto',sans-serif;
     font-size: 1.5rem;
     color: #383B58;
-    padding: 10px 0px 0px 30px;
+    padding: 20px 0px 0px 30px;
+    margin: 15px;
 }
