--- a/ProyectoX/src/index.css
+++ b/ProyectoX/src/index.css
@@ -1,7 +1,8 @@
 *{
     box-sizing: border-box;
     margin-left: 0; 
-    margin-right: 0;   
+    margin-right: 0;  
+    margin-bottom: 0; 
 }
 
 .space{
