--- a/ProyectoX/src/components/Footer.css
+++ b/ProyectoX/src/components/Footer.css
@@ -17,13 +17,13 @@
     margin-right: 20px;
 }
 
-img{
+.Logos{
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
 }
 
-p{
+.derechos{
     margin-top: 0;
     margin-bottom: 10px;
     margin-left: 20px;
