--- a/ProyectoX/src/components/Header.css
+++ b/ProyectoX/src/components/Header.css
@@ -5,13 +5,12 @@
     background-color: rgb(255, 252, 249);
 }
 
-body{
-    margin: 0;
+.logo{
+    margin-left: 2rem; 
 }
 
-img{
-    margin-left: 40px;
-    margin-top: 12px;
+.menu{
+    display: none;
 }
 
 .botones{
@@ -42,7 +41,7 @@ img{
     background-color: rgb(255, 252, 249);
     border-color: rgb(255, 183, 3);
     align-items: center;
-    
+    cursor: pointer;
 }
     
 .busqueda{
@@ -74,6 +73,7 @@ img{
     color:#02304781;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    cursor: pointer;
 }
     
 
@@ -90,17 +90,28 @@ img{
     color:#023047;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    cursor: pointer;
 }
 
 
 
-@media screen and (max-width: 500px) {
+@media only screen and (min-width: 500px) {
 
     .navBar-brand{
+        height: 6rem;
         width: 38.8rem;
     }
 
-    .busqueda{
+    .bienvenida{
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 2rem;
+        margin-top: 1rem;
+    }
+
+    .busqueda{   
+        justify-content: space-evenly;  
+        height: 22rem;
         width: 38.8rem;
     }
 
@@ -108,13 +119,36 @@ img{
         display: none;
     }
 
+    .menu{
+        display: inline;
+        width: 20%;
+        height: 20%;
+        margin-top: 2rem;
+    }
+
+    .go{
+        font-size: 1.4rem;
+        width: 36.6rem;
+        height: 3.0rem;
+    }
+
+    .search{
+        font-size: 1.4rem;
+        width: 36.6rem;
+        height: 3.0rem;
+    }
+
+    .botones2{
+        width: 28.8rem;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     
     
 }
 
-@media screen and (min-width: 1029px) {
-    
-}
+
 
 
 
