--- a/ProyectoX/src/components/Footer.css
+++ b/ProyectoX/src/components/Footer.css
@@ -28,3 +28,13 @@
     margin-bottom: 10px;
     margin-left: 20px;
 }
+
+
+@media only screen and (max-width: 505px){
+    .icons-final{
+        height: 3rem;
+        width: 38.8rem;
+        margin-top: 1rem;
+        margin-left: 0;
+    }
+}
