--- a/ProyectoX/src/Styles/Footer.css
+++ b/ProyectoX/src/Styles/Footer.css
@@ -35,7 +35,7 @@
     .icons-final{
         height: 3rem;
         width: 38.8rem;
-        margin-top: 1rem;
+        margin-top: 0;
         margin-left: 0;
     }
 }
