--- a/ProyectoX/src/Styles/Galeria.module.css
+++ b/ProyectoX/src/Styles/Galeria.module.css
@@ -1,12 +1,11 @@
-@media only screen and (max-width: 505px){
-.galeria{
+section{
     display: flex;
     width: 600px;
     height: 430px;
     /* Se debe modificar los PX estan en modo ejemplo */
 }
 
-.galeria img{
+section img{
     width: 0;
     flex-grow: 1;
     object-fit: cover;
@@ -14,7 +13,7 @@
     transition: .5s ease;
 }
 
-.galeria img:hover{
+section img:hover{
     cursor: crosshair;
     width: 300px;
     /* Se debe modificar los PX estan en modo ejemplo */
@@ -22,4 +21,68 @@
     filter: contrast(120%);
 }
 
+section a{
+    display: grid;
+    align-items: flex-end;
+    justify-items: center;
+    justify-content: flex-end;
+    text-decoration: none;
+}
+
+section button{
+    background-color: #e7e7e7;
+    border: none;
+    color: #fff;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 505px){
+    section{
+        display: flex;
+        width: 300px;
+        height: 215px;
+        /* Se debe modificar los PX estan en modo ejemplo */
+    }
+    
+    section img{
+        width: 0;
+        flex-grow: 1;
+        object-fit: cover;
+        opacity: .8;
+        transition: .5s ease;
+    }
+    
+    section img:hover{
+        width: 150px;
+        /* Se debe modificar los PX estan en modo ejemplo */
+        opacity: 1;
+        filter: contrast(120%);
+    }
+    
+    section a{
+        display: grid;
+        align-items: flex-end;
+        justify-items: center;
+        justify-content: flex-end;
+        text-decoration: none;
+    }
+    
+    section button{
+        display: inline-block;
+        background-color: #e7e7e7;
+        border: none;
+        color: #fff;
+        padding: 7px 15px;
+        text-align: center;
+        font-size: 12px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        cursor: pointer;
+    }
 }
