--- a/ProyectoX/src/Styles/Galeria.module.css
+++ b/ProyectoX/src/Styles/Galeria.module.css
@@ -1,11 +1,30 @@
-section{
+/* Se debe modificar los PX estan en modo ejemplo */
+/* Se debe modificar los PX estan en modo ejemplo */
+.galeria{
+    background-color: yellow;
     display: flex;
-    width: 600px;
-    height: 430px;
-    /* Se debe modificar los PX estan en modo ejemplo */
+    justify-content: space-around;
+    align-items: center;
+    width: 100vw;
+    height: 70vh;
+    border: 5px solid red;
 }
 
-section img{
+.imgPrincipal{
+    border: 5px solid red;
+    width: 100vw;
+
+}
+
+.contenedorImg{
+    width: 80px;
+    height: 70px;
+    border: 3px solid red;
+    object-fit: contain;
+    overflow: hidden;
+}
+
+.galeria img{
     width: 0;
     flex-grow: 1;
     object-fit: cover;
@@ -13,23 +32,22 @@ section img{
     transition: .5s ease;
 }
 
-section img:hover{
+.galeria img:hover{
     cursor: crosshair;
     width: 300px;
-    /* Se debe modificar los PX estan en modo ejemplo */
     opacity: 1;
     filter: contrast(120%);
 }
 
-section a{
+/* section a{
     display: grid;
     align-items: flex-end;
     justify-items: center;
     justify-content: flex-end;
     text-decoration: none;
-}
+} */
 
-section button{
+.botonVer{
     background-color: #e7e7e7;
     border: none;
     color: #fff;
@@ -43,46 +61,5 @@ section button{
 }
 
 @media only screen and (max-width: 505px){
-    section{
-        display: flex;
-        width: 300px;
-        height: 215px;
-        /* Se debe modificar los PX estan en modo ejemplo */
-    }
     
-    section img{
-        width: 0;
-        flex-grow: 1;
-        object-fit: cover;
-        opacity: .8;
-        transition: .5s ease;
-    }
-    
-    section img:hover{
-        width: 150px;
-        /* Se debe modificar los PX estan en modo ejemplo */
-        opacity: 1;
-        filter: contrast(120%);
-    }
-    
-    section a{
-        display: grid;
-        align-items: flex-end;
-        justify-items: center;
-        justify-content: flex-end;
-        text-decoration: none;
-    }
-    
-    section button{
-        display: inline-block;
-        background-color: #e7e7e7;
-        border: none;
-        color: #fff;
-        padding: 7px 15px;
-        text-align: center;
-        font-size: 12px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 700;
-        cursor: pointer;
-    }
 }
