--- a/ProyectoX/src/Styles/Card.module.css
+++ b/ProyectoX/src/Styles/Card.module.css
@@ -12,6 +12,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.iconStar{
+    color: #023047;
+}
+.iconLocation{
+    margin-right: 10px;
+}
 
 .card{
     display: flex;
@@ -294,6 +300,9 @@
         cursor: pointer;
         opacity: .5;
     }
+
+
+    
 
 
 
