--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -18,3 +18,35 @@ header {
     
     width: 100vw;
 }
+
+.grilla-imagenes{
+    display: flex;
+    width: 100vw;
+    height: 75vh;
+    border: 5px solid red;
+    
+}
+.grilla-imagenes div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.grilla-imagenes img{
+    width: 300px;
+    height: 250px;
+}
+
+.grilla-imagenes button{
+    background-color: #e7e7e7;
+    border: none;
+    border-radius: 15%;
+    color: #fff;
+    padding: 10px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 13px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    cursor: pointer;
+}
