--- a/ProyectoX/src/Styles/Footer.css
+++ b/ProyectoX/src/Styles/Footer.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-    background-color: rgb(142, 202, 230);
+    background-color: rgb(15, 76, 92);
 }
 
 
@@ -28,6 +28,7 @@
     margin-top: 0;
     margin-bottom: 10px;
     margin-left: 20px;
+    color: rgb(251, 139, 36);
 }
 
 
