--- a/ProyectoX/src/Styles/CardCategory.module.css
+++ b/ProyectoX/src/Styles/CardCategory.module.css
@@ -8,9 +8,14 @@
     border: 1px solid #DFE4EA;
     width: 17rem;
     height: 18rem;
+    margin-bottom: 15px;
     align-items:flex-start;    
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.card2:hover{
+    cursor: pointer;
 }
 
 .cardImg{
