--- a/ProyectoX/src/Styles/List.module.css
+++ b/ProyectoX/src/Styles/List.module.css
@@ -2,6 +2,6 @@
     font-family: 'Roboto',sans-serif;
     font-size: 1.5rem;
     color: #383B58;
-    padding: 20px 0px 0px 30px;
-    margin: 15px;
+    padding: 20px 0px 15px 30px;
+    margin:0;
 }
