--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -58,11 +58,12 @@
 .verMas{
     background-color: #942c2c;
     border: none;
-    border-radius: 15%;
+    border-radius: 20%;
     color: #fff;
     padding: 10px 10px;
     text-align: center;
     display: inline-block;
+    position: static;
     font-size: 13px;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -78,6 +79,16 @@ hr {
     margin-bottom: 2rem;
 }
 
+.calendar{
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+}
+
+.calendar button{
+    background-color: rgb(251, 139, 36);
+    color: #fff;
+}
 
 @media only screen and (max-width: 768px) {
 
