--- a/ProyectoX/src/Styles/Header.css
+++ b/ProyectoX/src/Styles/Header.css
@@ -1,7 +1,3 @@
-.header{
-    box-sizing: border-box;
-    
-}
 
 .navBar-brand{
     display: flex;
@@ -22,7 +18,7 @@
     margin-right: 20px;
     display: flex;
     align-items: center;
-    gap: 6.5rem;
+    gap: 7.5rem;
 }
 
 .botones2{
@@ -36,11 +32,11 @@
 .ubicacion{
     display: flex;
     justify-content: flex-end;
-  bottom: .5rem;
-  right: 1rem;
-  user-select: none;
-  cursor: pointer;
-}
+    bottom: .5rem;
+    right: 1rem;
+    user-select: none;
+    cursor: pointer;
+    }
 
 .crear{
     width: 10.6875rem;
@@ -106,6 +102,21 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     cursor: pointer;
+}
+
+.usuario {
+    width: 25rem;
+    height: 3rem;
+    margin-right: 1%;
+    margin-left: -100px;
+    border-radius: 0.3125rem;
+    font-size: 1.2rem;
+    color:rgb(2, 48, 71);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    background-color: rgb(255, 252, 249);
+    border-color: rgb(255, 183, 3);
+    
 }
 
 
