--- a/ProyectoX/src/Styles/Header.css
+++ b/ProyectoX/src/Styles/Header.css
@@ -18,6 +18,7 @@
     margin-right: 20px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: 7.5rem;
 }
 
@@ -107,8 +108,6 @@
 .usuario {
     width: 25rem;
     height: 3rem;
-    margin-right: 1%;
-    margin-left: -100px;
     border-radius: 0.3125rem;
     font-size: 1.2rem;
     color:rgb(2, 48, 71);
@@ -116,6 +115,7 @@
     font-weight: 700;
     background-color: rgb(255, 252, 249);
     border-color: rgb(255, 183, 3);
+    text-align: center;
     
 }
 
@@ -204,6 +204,14 @@
 
     .logo {
         margin-top: 2rem;
+    }
+
+    .ubication {
+        width: 38.8rem;
+    }
+
+    .categoryProduct {
+        width: 38.8rem;
     }
 
     
