--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -13,10 +13,6 @@
 .paddingTemplate{
     padding-left: 3rem;
 }
-.grilla-imagenes {
-    padding-left: 9rem;
-    padding-top: 2rem;
-}
 
 .arrowLeft {
     padding-right: 4.5rem;
@@ -35,18 +31,20 @@
     align-items: center;
     color: rgb(251, 139, 36);
 }
-.galaria{
-    position: relative;
+
+
+.galeria{
+    display: flex;
+    justify-content: space-around;
 }
 
 .botonGrilla{
     width: 30px;
-    position: absolute;
     top: 59%;
     left: 53.5%;
 }
 
-.grilla-imagenes div{
+.img4{
     display: grid;
     grid-template-columns: repeat(2, 0fr);
     grid-template-rows: repeat(2, 0fr);
@@ -73,8 +71,6 @@
     color: #fff;
     padding: 10px 10px;
     text-align: center;
-    display: inline-block;
-    position: static;
     font-size: 13px;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -86,34 +82,116 @@ hr {
     border-color:  rgba(251, 140, 36, 0.822);
 }
 
+h3 {
+    color: rgb(251, 139, 36);
+}
+
 .politica-producto {
     margin-bottom: 2rem;
+    margin-top: rem;
 }
 
 .calendar{
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    
+    flex-wrap: wrap;
+    background-color: rgba(154, 3, 31, 0.103);
+}
+
+.calendario {
+    color:rgb(2, 48, 71);
+    font-family: 'Roboto', sans-serif;
+    width: 34rem;
+    margin: 1.5rem;
 }
 
 .seleccion{
     font-family: 'Roboto', sans-serif;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    margin: 1.5rem;
 }
 
 .aplicar{
-    background-color: rgb(251, 139, 36);
-    color: #fff;
-    border-radius: 0%;
+    width: 10rem;
+    height: 2.2rem;
+    border-radius: 0.3125rem;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
+    font-size: 1rem;
+    color:rgb(2, 48, 71);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    background-color: rgb(255, 252, 249);
+    border-color: rgb(255, 183, 3);
+    align-items: center;
+    cursor: pointer;
+    margin: 1.5rem;
+}
+
+.carrusel {
+    
+    width: 40rem;
+    height: 38rem;
+    margin: 3rem;
 }
 
 @media only screen and (max-width: 768px) {
 
+    .img4 {
+        display: none;
+    }
 
+    .botonGrilla {
+        display: list-item;
+    }
+
+    #imgPrimera {
+        width: 35rem;
+        height: 23rem;
+    }
+
+    .grilla-imagenes {
+        display: flex;
+        justify-content: center;
+    }
+
+    hr {
+        width: 38.8rem;
+    }
 
 }
 
 
 @media only screen and (max-width: 505px) {
+
+    .img4 {
+        display: none;
+    }
+
+    #imgPrimera {
+        width: 30rem;
+        height: 21rem;
+    }
+
+    .grilla-imagenes {
+        display: flex;
+        justify-content: center;
+    }
+
+    .calendar {
+        width: 38.8rem;
+    }
+
+    .imgPrincipal {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    #imgPrimera {
+        margin-left: 13rem;
+    }
 
 }
