--- a/ProyectoX/src/Styles/CardProductReserve.css
+++ b/ProyectoX/src/Styles/CardProductReserve.css
@@ -8,10 +8,12 @@
     border: 1px solid #DFE4EA;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
-    margin:10px;
+    margin-top:92px;
+    margin-right: 50px;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #FFF;
     
 }
 
@@ -67,7 +69,7 @@
     font-weight: 700;
     font-size:0.975rem;
     padding-left: 21px;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 
 }
 
@@ -109,4 +111,11 @@
     align-items: center;
     width: 100%;
     height: 50px;
+}
+
+
+.buttonReserve:hover{
+    cursor: pointer;
+    opacity: 0.9;
+    color: #fb8b24;
 }
