--- a/ProyectoX/src/Styles/InputBlock.css
+++ b/ProyectoX/src/Styles/InputBlock.css
@@ -6,7 +6,8 @@
     border: 1px solid #DFE4EA;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
-    margin: 15px;
+    margin-top: 5px;
+    background-color: #FFF;
 
 }
 
