Corrigiendo errores de estilo template

--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -101,7 +101,7 @@ hr {
     font-family: 'Roboto', sans-serif;
 }
 
-.botones{
+.botonesCalendario{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
