--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -122,6 +122,10 @@ hr {
     opacity: 0.9;
 }
 
+.carrusel swiper-container{
+    border-radius: 3px solid greenyellow;
+}
+
 @media only screen and (max-width: 768px) {
 
 
