--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Roboto:wght@500;700&display=swap');
+
 .categoryProduct {
     height: 4rem;
     background-color: rgb(15, 77, 92);
@@ -18,6 +20,51 @@
     padding-right: 4.5rem;
     font-size: 2rem;
     color: rgb(236, 227, 227);
+}
+
+.caracteristicasProductos{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.caracteristicasProductosDetail{
+    font-family: 'Roboto', sans-serif;
+    margin:5px 15px;
+    font-size: 1.2rem;
+}
+
+.descriptionText{
+    font-size: 1.2rem;
+}
+
+.descriptionLocation{
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.iconsProducts{
+    color: #000;
+    margin-right: 5px;
+}
+
+.titulosProduct{
+    font-size: 1.4rem;
+    font-family: "Roboto",sans-serif;
+    font-weight: 700;
+    margin-top: 50px;
+}
+
+.categoryProductDetail{
+   padding-left: 3rem;
+    color:rgb(251, 139, 36); ;
+}
+
+.displayFlexColumn{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .ubication {
@@ -112,6 +159,35 @@ h3 {
     flex-direction: column;
     align-items: baseline;
     margin: 1.5rem;
+}
+.lineProduct{
+    position: relative;
+    top: 15px;
+    border: none;
+    height: 2px;
+    background-color:rgb(251, 139, 36);
+    margin: 20px 0;
+}
+
+.titulo-principal-footer-product {
+    position: relative;
+    top: 25px;
+    left: 43px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 28px;
+    color : rgb(251, 139, 36);
+}
+
+.titulos-footer-productP{
+    position: relative;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    color :  rgb(15, 77, 92)8;
 }
 
 .botonesCalendario{
