--- a/ProyectoX/src/Styles/Template.css
+++ b/ProyectoX/src/Styles/Template.css
@@ -86,6 +86,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-end;
+    margin:10px 5px 5px 220px;
 }
 
 .botonGrilla{
@@ -104,6 +105,7 @@
 #imgPrimera {
     width: 37rem;
     height: 23.4rem;
+    margin-right: 10px;
 }
 
 .galeria img{
@@ -239,6 +241,7 @@ h3 {
     grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
+    margin-left: 35px;
 }
 
 .aplicar{
@@ -254,7 +257,6 @@ h3 {
     border-color: rgb(255, 183, 3);
     align-items: center;
     cursor: pointer;
-    margin: 1.5rem;
 }
 
 .carrusel {
