--- a/ProyectoX/src/Styles/Header.css
+++ b/ProyectoX/src/Styles/Header.css
@@ -53,6 +53,7 @@
     background-color: rgb(255, 252, 249);
     border-color: rgb(255, 183, 3);
     align-items: center;
+    margin-top: 15px;
     cursor: pointer;
 }
     
